--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx,json,css,scss,md}'",
-    "format:check": "prettier --check 'src/**/*.{ts,tsx,js,jsx,json,css,scss,md}'",
     "dev": "vite",
     "server": "node server.js",
     "dev:full": "concurrently \"npm run dev\" \"npm run server\"",
     "build": "tsc && vite build",
-    "start": "NODE_ENV=production node server.js"
+    "vercel-build": "npm run build",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
